# wtw

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md
.github/workflows/: test.yml
docs/: spec.md
src/: error.rs  lib.rs  logging.rs  main.rs
src/config/: mod.rs  types.rs
src/git/: mod.rs  rev.rs
src/hooks/: executor.rs
src/shell/: cmd.rs  init.rs  mod.rs  pwsh.rs
src/worktree/: common.rs  list.rs  mod.rs  remove.rs  resolve.rs
tests/: add_spec.rs  cd_spec.rs  global_spec.rs  list_spec.rs  shell_spec.rs
tests/common/: mod.rs
wtw/src/: cli.rs
wtw/src/config/: loader.rs
wtw/src/git/: runner.rs  worktree.rs
wtw/src/worktree/: add.rs  resolve.rs
wtw/tests/: add_spec.rs  remove_spec.rs
